export FST metaanalysis

--- a/README.Rmd
+++ b/README.Rmd
@@ -284,6 +284,8 @@ se <- se[,order(se$FST)]
 sehm(se, rownames(topTags(Results$`se$FSTFST`,p.value = 0.05, n = 1000)), assayName = "corrected", do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Significant FST genes with corrected data")
 sehm(se, rownames(topTags(Results$`se$FSTFST`,p.value = 0.05, n = 1000)), assayName = "logcpm", do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Significant FST genes with uncorrected data")
 topTags(Results$`se$FSTFST`, p.value = 0.05, n = 30)
+dea <- as.data.frame(topTags(Results$`se$FSTFST`))
+write.table(dea, "meta_FST_dea.tab", row.names = TRUE, col.names = TRUE, sep = "\t")
 ```
 
 There are multiple candidate genes that are significantly altered by acute stress. Reassuringly, these genes contain many of the well-characterized immediate early genes known to be reliably induced by acute stress challenges (e.g. Egr4, Fos, Dusp1, JunB, Per1, Npas4 etc.).
